# listen

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
scripts/: install-systemd-service.sh  openwakeword-sidecar.py
src/: app.rs  audio.rs  cli.rs  config.rs  conversation_log.rs  gateway.rs  main.rs  transcription.rs  wake_sidecar.rs
systemd/: openclaw-listen.service  openclaw-listen.service.in  openclaw-listen.tmpfiles  openclaw-listen.tmpfiles.in
