[package]
name = "listen"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "CLI voice companion for OpenClaw on Linux using OpenAI Whisper."

[features]
default = []
audio-cpal = ["dep:cpal"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
cpal = { version = "0.16", optional = true }
dirs = "6.0"
dotenvy = "0.15"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
futures-util = "0.3"
hex = "0.4"
hound = "3.5"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
